Added seek bar for progress

--- a/app/src/main/res/layout/article.xml
+++ b/app/src/main/res/layout/article.xml
@@ -173,4 +173,10 @@
 
     </LinearLayout>
 
+    <SeekBar
+        android:id="@+id/articleSentenceSeek"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0" />
+
 </LinearLayout>
